--- a/layouts/partials/home/hero-video.html
+++ b/layouts/partials/home/hero-video.html
@@ -4,7 +4,7 @@
 <div class="hero-video-block scalable d-flex flex-column align-items-center justify-content-around">
   <div class="hero-video-background">
     <div class="hero-video-container">
-      <iframe src="https://www.youtube.com/embed/6ccjR9qI5YU?controls=0&autoplay=1&mute=1&modestbranding=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; loop; picture-in-picture"></iframe>
+      <iframe src="https://www.youtube.com/embed/xLsslRqnCfk?controls=0&autoplay=1&mute=1&modestbranding=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; loop; picture-in-picture"></iframe>
     </div>
   </div>
   <div class="container hero-slideshow-foreground">
