First implementation of lightbox
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/home/collaboration.html
+++ b/layouts/partials/home/collaboration.html
@@ -4,7 +4,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     <div class="container align-items-center justify-content-center">
       <div class="row pb-2">
-        <a class="col col-md-6 col-12" href="#" target="_blank">
+        <a class="lightbox-trigger col col-md-6 col-12" href="#" target="_blank" data-lightbox="deadhaus-sonata-video">
           <div class="collaboration-box" style="background-image: url('img/home/collaboration/01.png');">
             <div class="collaboration-overlay">
               <div class="collaboration-content">
@@ -15,6 +15,11 @@
             </div>
           </div>
         </a>
+        <div id="deadhaus-sonata-video" class="lightbox-content">
+          <div class="lightbox-content-center">
+            <iframe src="https://player.vimeo.com/video/639666970?h=d0489b1843" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+          </div>
+        </div>
         <a class="col col-md-6 col-12" href="#" target="_blank">
           <div class="collaboration-box" style="background-image: url('img/home/collaboration/02.png');">
             <div class="collaboration-overlay">
