--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -900,8 +900,8 @@ $width: '59vw';
 // layouts/partials/home/collaboration.html 
 
 .home-collaboration
-  background: linear-gradient(180deg, #2A4875 20.83%, rgba(42, 72, 117, 0.2) 76.56%), 
-  linear-gradient(180deg, rgba(42, 72, 117, 0.2) 0%, #151D2B 87.5%),
+  background: linear-gradient(180deg, rgba(42, 72, 117, .75) 20.83%, rgba(42, 72, 117, 0.2) 76.56%), 
+  linear-gradient(180deg, rgba(42, 72, 117, 0.2) 0%, rgba(21, 29, 43, 0.9) 87.5%),
   url('/img/home/collaboration.png')
   background-size: cover
   background-position: 50% 50%
@@ -973,6 +973,48 @@ $width: '59vw';
         .cta
           opacity: 1
 
+// Lightbox
+
+.lightbox-content
+  display: none
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
+  background: rgba(0,0,0,.75)
+  z-index: 5000
+
+  .lightbox-content-center
+    position: absolute
+    left: 50%
+    top: 50%
+    width: 72%
+    padding-bottom: 40%
+    transform: translate(-50%, -50%)
+    -webkit-transform: translate(-50%, -50%)
+
+    &::after
+      content: '+'
+      position: absolute
+      right: -40px
+      z-index: 5001
+      color: #fff
+      transform: rotate(45deg)
+      -webkit-transform: rotate(45deg)
+      font-size: 64px
+      line-height: 36px
+      top: 0
+      cursor: pointer
+
+    iframe
+      position: absolute
+      top: 0
+      left: 0
+      bottom: 0 
+      right: 0
+      width: 100%
+      height: 100%
 
 // layouts/partials/home/download.html 
 
