--- a/layouts/download/section.html
+++ b/layouts/download/section.html
@@ -1,17 +1,31 @@
 {{ define "main" }}
-{{ partial "download/hero.html" . }}
-{{ with .Content }}
-<section class="container pt-lg-5">
-  <div class="row">
-    <div class="col-12 col-lg-5 pr-lg-5">
-      {{ partial "download/download.html" . }}
-    </div>
-    <div class="col-12 col-lg-7">
-      {{ . }}
+<div class="scalable download-hero d-flex align-items-center">
+  <div class="container text-light">
+    <div class="row pt-5 pb-5">
+      <div class="col col-12 text-center">
+        <h1 class="title">
+          {{ .Title }}
+        </h1>
+        <h4 class="pb-1">
+          {{ .Content }}
+        </h5>
+      </div>
     </div>
   </div>
-</section>
-{{ end }}   
-{{ partial "download/getting-started.html" . }}  
+</div>
+<div id="os-selector" class="os-selector">
+  <div class="os-selector-row">
+    <a id="os-windows" class="os-selector-button active" href="#windows" data-os="windows">Windows</a>
+    <a id="os-linux" class="os-selector-button" href="#linux" data-os="linux">Linux</a>
+  </div>
+</div>
+<div id="content-windows" class="os-content active">
+  {{ partial "download/content-windows.html" . }}
+  {{ partial "download/getting-started-windows.html" . }}
+</div>
+<div id="content-linux" class="os-content">
+  {{ partial "download/content-linux.html" . }}
+  {{ partial "download/getting-started-linux.html" . }}
+</div>
 {{ partial "footer.html" . }}  
 {{ end }}
