--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -1031,6 +1031,125 @@ $os-selector-mobile-height: 48px
 
   @include media-breakpoint-down(md)
     text-align: center
+    
+// layouts/partials/home/collaboration.html 
+
+.home-collaboration
+  background: linear-gradient(180deg, rgba(42, 72, 117, .75) 20.83%, rgba(42, 72, 117, 0.2) 76.56%), 
+  linear-gradient(180deg, rgba(42, 72, 117, 0.2) 0%, rgba(21, 29, 43, 0.9) 87.5%),
+  url('/img/home/collaboration.png')
+  background-size: cover
+  background-position: 50% 50%
+  color: $o3de-white
+  text-align: center
+
+  & > .container > p
+    width: 80%
+    margin: 0 10% 3rem
+
+  .collaboration-more
+    text-align: center
+    margin: 2rem 0 5rem
+
+    .btn
+      width: 320px
+
+      @include media-breakpoint-down(md)
+        width: 240px
+
+  .collaboration-box
+    position: relative
+    display: block
+    padding-bottom: 75%
+    background-size: cover
+    background-position: 50% 50%
+    border-radius: 5px
+    overflow: hidden
+    
+    @include media-breakpoint-down(md)
+      margin-bottom: 2rem
+  
+    .collaboration-overlay
+      position: absolute
+      background: rgba(0,0,0,.5)
+      left: 0
+      top: 0
+      right: 0
+      bottom: 0
+
+      .collaboration-content
+        position: absolute
+        top: 50%
+        width: 100%
+        text-align: center
+        color: #fff
+        transform: translate(0, -50%)
+        -webkit-transform: translate(0, -50%)
+        margin-top: 28px
+        transition: all .6s ease
+
+        .cta
+          border: 1px solid #fff
+          border-radius: 5px
+          width: 140px
+          padding: 5px 0
+          margin: 10px auto 0
+          transition: all .6s ease
+          opacity: 0
+
+          &:hover
+            background-color: #fff
+            color: #000
+    
+    &:hover
+      .collaboration-content
+        margin-top: 0
+
+        .cta
+          opacity: 1
+
+// Lightbox
+
+.lightbox-content
+  display: none
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
+  background: rgba(0,0,0,.75)
+  z-index: 5000
+
+  .lightbox-content-center
+    position: absolute
+    left: 50%
+    top: 50%
+    width: 72%
+    padding-bottom: 40%
+    transform: translate(-50%, -50%)
+    -webkit-transform: translate(-50%, -50%)
+
+    &::after
+      content: '+'
+      position: absolute
+      right: -40px
+      z-index: 5001
+      color: #fff
+      transform: rotate(45deg)
+      -webkit-transform: rotate(45deg)
+      font-size: 64px
+      line-height: 36px
+      top: 0
+      cursor: pointer
+
+    iframe
+      position: absolute
+      top: 0
+      left: 0
+      bottom: 0 
+      right: 0
+      width: 100%
+      height: 100%
 
 // layouts/partials/home/download.html 
 
