--- a/layouts/partials/home/collaboration.html
+++ b/layouts/partials/home/collaboration.html
@@ -2,10 +2,10 @@
   <div class="container d-flex flex-column align-items-center justify-content-center">
     <h2 class="mb-3">The Power of Community Collaboration</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <div class="container align-items-center justify-content-center">
-      <div class="row pb-2">
+    <div class="container align-items-center justify-content-center mb-3">
+      <div class="row pb-2 justify-content-center">
         <a class="lightbox-trigger col col-md-6 col-12" href="#" target="_blank" data-lightbox="deadhaus-sonata-video">
-          <div class="collaboration-box" style="background-image: url('img/home/collaboration/01.png');">
+          <div class="collaboration-box" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/image002.png');">
             <div class="collaboration-overlay">
               <div class="collaboration-content">
                 <h4>Deadhaus Sonata</h4>
@@ -17,23 +17,9 @@
         </a>
         <div id="deadhaus-sonata-video" class="lightbox-content">
           <div class="lightbox-content-center">
-            <iframe src="https://player.vimeo.com/video/639666970?h=d0489b1843" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+            <iframe src="https://player.vimeo.com/video/647124091?h=d6b3a9c0aa" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
           </div>
         </div>
-        <a class="col col-md-6 col-12" href="#" target="_blank">
-          <div class="collaboration-box" style="background-image: url('img/home/collaboration/02.png');">
-            <div class="collaboration-overlay">
-              <div class="collaboration-content">
-                <h4>Gnomebody's Home</h4>
-                <p>Joshua Rainbolt</p>
-                <div class="cta">Watch</div>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="collaboration-more">
-        <a href="#" class="btn text-white download-btn">View more projects</a>
       </div>
     </div>
   </div>
