--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -1,14 +1,21 @@
 <div class="container-flex features-outer">
   <section class="home-features">
     <div class="feature-row mt-3 mb-3">
-      <div class="features-img features-img-copy" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/Feature1.jpg')"></div>
+      <div class="features-img features-img-copy" style="background-image: url('https://dhs-o.s3.us-east-2.amazonaws.com/images/image001.png')"></div>
       <div class="container pt-5 pb-5">
         <div class="row">
           <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Create AAA games and high-fidelity simulations</h2>
-            <p>O3DE has been developed with cutting-edge, real-time graphics and complex interactions in mind. 
-              Create robust, engaging experiences with O3DE's multi-threaded photorealistic renderer, extensible 3D content editor,
-                data-driven character animation system, real-time physics engine, and access to a growing open source community. </p>
+            <p>Developed with cutting-edge, real-time graphics and complex interactions in mind, O3DE allows you to create robust, engaging experiences using our:
+              <ul>
+                <li>Multi-threaded and extensible photorealistic renderer</li>
+                <li>Extensible and visual 3D content editor</li>
+                <li>Data-driven character animation system</li>
+                <li>Real-time physics engine</li>
+                <li>High-performance networking layer</li>
+                <li>Access to our growing open source community</li>
+              </ul>
+            </p>
           </div>
         </div>
       </div>
@@ -19,11 +26,9 @@
         <div class="row">
           <div class="features-text col col-12 col-lg-7">
             <h2>Built for extensibility</h2>
-            <p>O3DE's modular architecture is built for customization from day one. 
-              Each one of O3DE's integrated components (called "Gems") can be adopted separately, 
-              giving you access to the specific functionality needed for your game or application.</p>
-              <p>Add new editing tools, features, and development workflows to your projects, or choose from a
-                  variety of community-maintained Gems to extend and enhance the engine's capabilities.</p>
+            <p>O3DE's modular architecture is built for customization from day one. Each component—known as a Gem—can be adopted separately, giving you access to the specific functionality needed for your application.</p>
+            <p>Add new editing tools, features, and development workflows to your projects. Choose from a variety of community-maintained Gems to extend and enhance the engine's capabilities in anything from AI and robotics to push notifications and VR.</p>
+            <p>With our engine’s SDK capabilities, you can use O3DE as a toolkit and buildable foundation for any type of 3D project you can imagine.</p>              
           </div>
         </div>
       </div>
@@ -34,9 +39,7 @@
         <div class="row">
           <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Integrate with your favorite cloud services</h2>
-          <p>O3DE's Gem system provides integrations and support for cloud services to add additional functionality
-              to games and simulations. Choose from existing backend cloud modules, 
-              or create your own Gems with custom capabilities to bring your favorite cloud services to your projects.</p>
+            <p>O3DE's Gem system provides integrations and support for cloud services, which enables you to extend the functionality of your simulations and experiences. Choose from existing backend cloud modules, or create your own gems with custom capabilities to bring the power of your favorite cloud services to your projects.</p>
           </div>
         </div>
       </div>
