--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -2,9 +2,9 @@
 <section class="home-download">
   <div class="d-flex flex-column align-items-center container pb-4 pt-5">
       <h2>Try out Open 3D Engine now!</h2>
-      <h5 class="mt-2 mb-2">Interesting in kicking the tires? Fork and build O3DE from our GitHub repo!</h5>
+      <h5 class="mt-2 mb-2">Interesting in kicking the tires? Download O3DE for your platform now!</h5>
       <p class="buttons">
-        <a href="/download" class="my-3 mr-3 btn text-white download-btn btn-lg">Try Out O3DE</a>
+        <a href="/download" class="my-3 mr-3 btn text-white download-btn btn-lg">Download O3DE</a>
       </p>
   </div>
 </section>
