--- a/layouts/partials/home/hero-slideshow.html
+++ b/layouts/partials/home/hero-slideshow.html
@@ -5,8 +5,8 @@
   <div class="hero-slideshow-background">
     <div id="hero-slideshow" class="hero-slideshow">
       <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/003.jpg')"></div>
-      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/004.jpg')"></div>
-      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/005.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/004.png')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/005.png')"></div>
       <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/006.jpg')"></div>
       <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/001.jpg')"></div>
       <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/002.jpg')"></div>
