Fix background transition declarations
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -1070,9 +1070,9 @@ $os-selector-mobile-height: 48px
   
     .collaboration-overlay
       position: absolute
-      background: rgba(0,0,0,.2)
-      transition: background .6s ease
-      -webkit-transition: background .6s ease
+      background-color: rgba(0,0,0,.2)
+      transition: background-color .6s ease
+      -webkit-transition: background-color .6s ease
       left: 0
       top: 0
       right: 0
@@ -1106,7 +1106,7 @@ $os-selector-mobile-height: 48px
       background-size: auto 105%
 
       .collaboration-overlay
-        background: rgba(0,0,0,.5)
+        background-color: rgba(0,0,0,.5)
 
         .collaboration-content
           margin-top: 0
