--- a/layouts/partials/download/getting-started-windows.html
+++ b/layouts/partials/download/getting-started-windows.html
@@ -24,10 +24,10 @@
         </a>
       </div>
       <div class="col col-12 col-md-6 col-lg-3">
-        <a href="https://o3de.org/docs/welcome-guide/create/creating-projects-using-cli/">
+        <a href="https://staging-2111--o3deorg.netlify.app/docs/welcome-guide/setup/setup-from-installer/">
           <div class="card mb-3">
             <h4>Install O3DE via Installer</h4>
-            <p>Lorem Ipsum dolor sit amet.</p>
+            <p>Learn how to install O3DE for Windows 64-bit.</p>
             <div class="learn-more">Learn more</div>
           </div>
         </a>
