--- a/layouts/partials/download/content-windows.html
+++ b/layouts/partials/download/content-windows.html
@@ -32,7 +32,7 @@
         <li>40 to 100 GB of free disk space</li>
         <li>1366 x 768 px screen resolution</li>
       </ul>
-      <p> For more detailed requirements, read <a href="https://o3de.org/docs/welcome-guide/requirements/">O3DE System Requirements</a>().</p>
+      <p> For more detailed requirements, read <a href="https://o3de.org/docs/welcome-guide/requirements/">O3DE System Requirements</a>.</p>
       <h5>Instructions</h5>
       <p>Choose the "Download O3DE" button, and read the documentation and follow the instructions in it.</p>
     </div>
