Fixed rendering issue
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/content-windows.html
+++ b/layouts/partials/download/content-windows.html
@@ -8,7 +8,7 @@
         <a href="https://o3debinaries.org/download/windows.html" class="btn-xl-block btn-lg btn-primary text-white text-center" target="_blank">Download O3DE</a>
       </p>
       <div class="github-box mr-5">
-        <h3><i class="fab fa-github">Customize your Engine</i></h3>
+        <h3><i class="fab fa-github"></i>Customize your Engine</h3>
         <p>Looking to dive deep into O3DE? Get the engine sources, build O3DE, and start working with the code now.</p>
         <p id="github-page-button-windows">
           <a href="https://github.com/o3de/o3de/main" class="btn-xl-block btn-lg btn-green text-white text-center" target="_blank">Fork from GitHub</a>
