--- a/layouts/partials/download/content-windows.html
+++ b/layouts/partials/download/content-windows.html
@@ -34,7 +34,7 @@
       </ul>
       <p> For more detailed requirements, read <a href="https://o3de.org/docs/welcome-guide/requirements/">O3DE System Requirements</a>.</p>
       <h5>Instructions</h5>
-      <p>Choose the "Download O3DE" button, and read the documentation and follow the instructions in it.</p>
+      <p>Choose the "Download O3DE" button, <a href="https://o3de.org/docs/welcome-guide/setup/setup-from-installer/">read the documentation</a>, and follow the instructions in it.</p>
     </div>
   </div>
 </section>
