--- a/layouts/partials/download/getting-started-linux.html
+++ b/layouts/partials/download/getting-started-linux.html
@@ -24,7 +24,7 @@
         </a>
       </div>
       <div class="col col-12 col-md-6 col-lg-3">
-        <a href="https://staging-2111--o3deorg.netlify.app/docs/welcome-guide/setup/setup-from-installer/">
+        <a href="https://o3de.org/docs/welcome-guide/setup/setup-from-installer/">
           <div class="card mb-3">
             <h4>Install O3DE via Debian Package</h4>
             <p>Learn how to install O3DE for Linux (Ubuntu 18.04 LTS).</p>
