updated blue button CTAs
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/content-linux.html
+++ b/layouts/partials/download/content-linux.html
@@ -5,7 +5,7 @@
       <div class="download_release">O3DE Stable 21.11 Release</div>
       <p class="download_notes">Read the <a href="https://o3de.org/docs/release-notes/archive/21-11-release-notes/">Release Notes</a> to learn more about O3DE Stable 21.11 Release.</p>
       <p id="download-page-button-windows" class="mr-5">
-        <a href="https://o3debinaries.org/download/linux.html" class="btn-xl-block btn-lg btn-primary text-white text-center" target="_blank">Go to Debian Package download</a>
+        <a href="https://o3debinaries.org/download/linux.html" class="btn-xl-block btn-lg btn-primary text-white text-center" target="_blank">Download Debian Package</a>
       </p>
       <div class="github-box mr-5">
         <h3><i class="fab fa-github"></i>Customize your Engine</h3>
