--- a/layouts/partials/download/getting-started-windows.html
+++ b/layouts/partials/download/getting-started-windows.html
@@ -26,7 +26,7 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/setup/installing-windows/">
           <div class="card mb-3">
-            <h4>Install O3DE via Installer</h4>
+            <h4>Install O3DE for Windows</h4>
             <p>Learn how to install O3DE for Windows 64-bit.</p>
             <div class="learn-more">Learn more</div>
           </div>
