Minor fixes to styling, removing lorem ipsum content.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -854,7 +854,6 @@ $os-selector-mobile-height: 48px
       font-size: 1.8rem
     
   @include media-breakpoint-down(md)
-    text-align: center
     padding: 0 32px
     margin: 0
 
@@ -1319,7 +1318,7 @@ $os-selector-mobile-height: 48px
   margin-top: 10px
 
 .github-box
-  background-color: rgba(30, 112, 235, 0.03)
+  background-color: #EAF6FF
   border-radius: 3px
   padding: 16px
   margin-bottom: 12px
