Late-breaking minor fixes to O3DE.org copy
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -28,7 +28,7 @@
             <h2>Built for extensibility</h2>
             <p>O3DE's modular architecture is built for customization from day one. Each component—known as a Gem—can be adopted separately, giving you access to the specific functionality needed for your application.</p>
             <p>Add new editing tools, features, and development workflows to your projects. Choose from a variety of community-maintained Gems to extend and enhance the engine's capabilities in anything from AI and robotics to push notifications and VR.</p>
-            <p>With our engine’s SDK capabilities, you can use O3DE as a toolkit and buildable foundation for any type of 3D project you can imagine.</p>              
+            <p>With our engine's SDK capabilities, you can use O3DE as a toolkit and buildable foundation for any type of 3D project you can imagine.</p>              
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Integrate with your favorite cloud services</h2>
-            <p>O3DE's Gem system provides integrations and support for cloud services, which enables you to extend the functionality of your simulations and experiences. Choose from existing backend cloud modules, or create your own gems with custom capabilities to bring the power of your favorite cloud services to your projects.</p>
+            <p>O3DE's Gem system provides integrations and support for cloud services, enabling you to extend the functionality of your simulations and experiences. Choose from existing backend cloud modules, or create your own gems with custom capabilities to bring the power of your favorite cloud services to your projects.</p>
           </div>
         </div>
       </div>
