removing collab section pending marketing review
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -28,7 +28,7 @@
             <h2>Built for extensibility</h2>
             <p>O3DE's modular architecture is built for customization from day one. Each component—known as a Gem—can be adopted separately, giving you access to the specific functionality needed for your application.</p>
             <p>Add new editing tools, features, and development workflows to your projects. Choose from a variety of community-maintained Gems to extend and enhance the engine's capabilities in anything from AI and robotics to push notifications and VR.</p>
-            <p>With our engine's SDK capabilities, you can use O3DE as a toolkit and buildable foundation for any type of 3D project you can imagine.</p>              
+            <p>With our engine's SDK capabilities, you can use O3DE as a foundation for any type of 3D project you can imagine.</p>              
           </div>
         </div>
       </div>
