--- a/layouts/partials/home/collaboration.html
+++ b/layouts/partials/home/collaboration.html
@@ -1,6 +1,6 @@
 <section class="home-collaboration pt-5 pb-5">
   <div class="container d-flex flex-column align-items-center justify-content-center">
-    <h2 class="mb-3">The Power of Community Collaboration</h2>
+    <h2 class="mb-3">Developer Spotlight</h2>
     <p></p>
     <div class="container align-items-center justify-content-center mb-3">
       <div class="row pb-2 justify-content-center">
