Fix a few issues on the linux download page
Signed-off-by: William Hayward <wilhayw@amazon.com>

--- a/layouts/partials/download/content-linux.html
+++ b/layouts/partials/download/content-linux.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-12 col-lg-7">
       <h5>Minimum System Requirements</h5>
-      <p>O3DE (for Linux) requires Ubuntu 18.04 LTS.</p>
+      <p>O3DE for Linux requires Ubuntu 20.04 LTS.</p>
       <ul>
         <li>2.5 GHz Intel or AMD processor with 4 or more physical cores</li>
         <li>8 GB RAM</li>
@@ -34,7 +34,7 @@
       </ul>
       <p> For more detailed requirements, read <a href="https://o3de.org/docs/welcome-guide/requirements/">O3DE System Requirements</a>.</p>
       <h5>Instructions</h5>
-      <p>Choose the "Download O3DE" button, <a href="https://o3de.org](/docs/welcome-guide/setup/installing-linux/">read the documentation</a>, and follow the instructions in it.</p>
+      <p>Choose the "Download O3DE" button, <a href="https://o3de.org/docs/welcome-guide/setup/installing-linux/">read the documentation</a>, and follow the instructions in it.</p>
     </div>
   </div>
 </section>
