--- a/layouts/partials/download/getting-started-linux.html
+++ b/layouts/partials/download/getting-started-linux.html
@@ -26,7 +26,7 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/setup/installing-linux/">
           <div class="card mb-3">
-            <h4>Install O3DE for Linux</h4>
+            <h4>Install O3DE for Linux (Preview)</h4>
             <p>Learn how to install the O3DE Debian package for Linux (Ubuntu 20.04 LTS).</p>
             <div class="learn-more">Learn more</div>
           </div>
