--- a/layouts/partials/download/getting-started-windows.html
+++ b/layouts/partials/download/getting-started-windows.html
@@ -35,7 +35,7 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/setup/troubleshooting/">
           <div class="card mb-3">
-            <h4>Troubleshooting the setup</h4>
+            <h4>Troubleshooting the Setup</h4>
             <p>Rarely do things go perfectly. Check out our initial troubleshooting advice, or contribute your own tips!</p>
             <div class="learn-more">Learn more</div>
           </div>
