Fix a few issues on the Linux download page (#1247)
* Fix a few issues on the linux download page

Signed-off-by: William Hayward <wilhayw@amazon.com>

* Add preview qualifier in the title

Signed-off-by: William Hayward <wilhayw@amazon.com>

* Fix for title casing

Signed-off-by: William Hayward <wilhayw@amazon.com>

* Fix for title casing (for Windows too)

Signed-off-by: William Hayward <wilhayw@amazon.com>

--- a/layouts/partials/download/getting-started-linux.html
+++ b/layouts/partials/download/getting-started-linux.html
@@ -26,8 +26,8 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/setup/installing-linux/">
           <div class="card mb-3">
-            <h4>Install O3DE for Linux</h4>
-            <p>Learn how to install the O3DE Debian package for Linux (Ubuntu 18.04 LTS).</p>
+            <h4>Install O3DE for Linux (Preview)</h4>
+            <p>Learn how to install the O3DE Debian package for Linux (Ubuntu 20.04 LTS).</p>
             <div class="learn-more">Learn more</div>
           </div>
         </a>
@@ -35,7 +35,7 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/setup/troubleshooting/">
           <div class="card mb-3">
-            <h4>Troubleshooting the setup</h4>
+            <h4>Troubleshooting the Setup</h4>
             <p>Rarely do things go perfectly. Check out our initial troubleshooting advice, or contribute your own tips!</p>
             <div class="learn-more">Learn more</div>
           </div>
