--- a/layouts/shortcodes/known-issue.html
+++ b/layouts/shortcodes/known-issue.html
@@ -4,9 +4,9 @@
     <div class="row no-gutters">
       <div class="col-md-2 bg-warning text-white p-2"><strong>Known issue: </strong></div> 
       <div class="col p-2">  <p>{{ trim .Inner " \n" | markdownify }}</p>
-        <!-- Find GitHub issue <a href="{{.Get "issue"}}">here</a>. -->
+        <!-- Find link <a href="{{.Get "link"}}">here</a>. -->
             {{ if .Get "link" }}
-                You can find information about this issue here <a href="{{.Get "issue"}}">here</a>.
+                You can find information about this issue <a href="{{.Get "link"}}">here</a>.
             {{else}}
                 There is no information listed for this issue. Add information by referencing an <a href="https://github.com/o3de/o3de/issues">issue</a>, <a href="https://github.com/o3de/o3de/discussions">discussion</a>, or <a href="https://github.com/o3de/o3de/pulls">pull request</a>.
             {{end}}
@@ -20,12 +20,12 @@
 {{/*  
     Example:
 
-    {{< todo issue="https://github.com/o3de/o3de.org/issues/432" >}}
+    {{< known-issue link="https://github.com/o3de/o3de.org/issues/432" >}}
     At this time, you cannot do X. This will be resolved by YZ in development. 
-    {{< /todo >}}
+    {{< /known-issue >}}
     
     
-    {{< todo >}}
-    The details of this issue are XYZ. There is no link to the issue.
-    {{< /todo >}}    
+    {{< known-issue >}}
+    The details of this issue are XYZ.
+    {{< /known-issue >}}    
 */}}
