Prepend page title in HTML title
Signed-off-by: Alex Peterson <26804013+AMZN-alexpete@users.noreply.github.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,11 @@
   <head>
     <title>
       {{ block "title" . }}
-        {{ site.Title }}
+        {{if .IsHome -}}
+          {{ site.Title }}
+        {{- else -}}
+          {{ .Title }} - {{ site.Title }}
+        {{- end }}
       {{ end }}
     </title>
     {{ partial "css.html" . }}
