--- a/layouts/partials/search-results.html
+++ b/layouts/partials/search-results.html
@@ -1,5 +1,23 @@
+<div class="container">
+  <h1 id="search-title">Search</h1>
+  <ul id="results"></ul>
+</div>
 <script>
-  window.store = {
+  const params = new URLSearchParams(window.location.search);
+  const queryParam = params.get('query');
+  console.log("Query param is " + params.get('query'));
+  if(queryParam !== null && queryParam.length > 0)
+  {
+    $(".search-input-view").show();
+    $('#search-title').text('Searching for ' + '"' + queryParam + '" ...');
+    $("#search-input").val(queryParam);
+  }
+  // close off this script block so it gets evaluated before the heavy lifting
+</script>
+<script>
+  if(queryParam !== null && queryParam.length > 0)
+  {
+    window.store = {
       // You can specify your blog section only:
       {{ range .Site.Pages }}
       // For all pages in your site, use "range .Site.Pages"
@@ -11,15 +29,51 @@
           "url": "{{ .Permalink }}"
       },
       {{ end }}
+    }
+
+    const idx = lunr(function () {
+      this.ref('id')
+      this.field('title', {
+        boost: 15
+      })
+      this.field('tags')
+      this.field('content', {
+        boost: 10
+      });
+  
+      for (const key in window.store) {
+        this.add({
+          id: key,
+          title: window.store[key].title,
+          tags: window.store[key].category,
+          content: window.store[key].content
+        });
+      }
+    })
+
+    // Perform the search
+    const results = idx.search(queryParam);
+
+    // Update the search title
+    $('#search-title').text('Search results for ' + '"' + queryParam + '"');
+
+    // Update the list with results
+    const searchResults = document.getElementById('results');
+    if (results.length) {
+      let resultList = '';
+      // Iterate and build result list elements
+      for (const n in results) {
+        const item = store[results[n].ref];
+        resultList += '<li><p><a href="' + item.url + '">' + item.title + '</a></p>';
+        resultList += '<p>' + item.content.substring(0, 400) + '...</p></li>';
+      }
+      searchResults.innerHTML = resultList;
+    } else {
+      searchResults.innerHTML = 'No results found.';
+    }
   }
-
-
-  const params = new URLSearchParams(window.location.search);
-  const queryParam = params.get('query');
-  console.log("Query param is " + params.get('query'));
-  </script>
-
-<div class="container">
-  <h1 id="search-title"> Search Results for </h1>
-  <ul id="results"></ul>
-</div>
+  else
+  {
+    $('#search-title').text('No search term provided');
+  }
+</script>
