Restore top level nav menu subsections for mobile
Signed-off-by: Alex Peterson <26804013+AMZN-alexpete@users.noreply.github.com>

--- a/layouts/docs/docs_landing.html
+++ b/layouts/docs/docs_landing.html
@@ -3,6 +3,11 @@
 {{ $allSections  := site.Sections }} <!-- "blog" and "docs" -->
 {{ $docsSections := where $allSections "Section" "docs" }}
 
+{{/* Include the top level navigation for mobile */}}
+<section class="hide-content docs-sidebar">
+  {{ partial "section-nav.html" . }}
+</section>
+
 <div class="container pt-3 px-5 pb-3">
   <div class="row flex">
     <div class="col-12 docs-content">
