Add Microsoft to Premier partners list
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -914,10 +914,15 @@ $os-selector-mobile-height: 48px
   .intel-logo
     background-image: url('/img/logos/partnerLogos/intel.svg')
     width: 110px
+
+  .microsoft-logo
+    background-image: url('/img/logos/partnerLogos/microsoft.svg')
+    margin-left: 32px
   
   .niantic-logo
     background-image: url('/img/logos/partnerLogos/niantic.svg')
-    width: 140px
+    width: 128px
+    margin: 0 -24px 0 0
 
 
   .accelbyte-logo
