--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -13,6 +13,7 @@
             <div class="partner-logo huawei-logo"></div>
             <div class="partner-separator"></div>
             <div class="partner-logo intel-logo"></div>
+            <div class="partner-logo microsoft-logo"></div>
             <div class="partner-logo niantic-logo"></div>
           </div>
           <div class="carousel-item">
