Created footer for docs that has O3DE logo to take users back to home page.
Signed-off-by: Chanelle Mosquera <75444793+chanmosq@users.noreply.github.com>

--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -19,7 +19,7 @@
             <h1 class="title">{{ .Page.Title | markdownify }}</h1>
             {{ partial "docs/content.html" . }}  
             <hr class="mt-5" />   
-            {{ partial "footer-content.html" . }}
+            {{ partial "docs-footer.html" . }}
           </div>
         </div>
       </section>
