--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -19,7 +19,7 @@
             <h1 class="title">{{ .Page.Title | markdownify }}</h1>
             {{ partial "docs/content.html" . }}  
             <hr class="mt-5" />   
-            {{ partial "footer-content.html" . }}
+            {{ partial "docs-footer.html" . }}
           </div>
         </div>
       </section>
