--- a/layouts/partials/docs-footer.html
+++ b/layouts/partials/docs-footer.html
@@ -4,25 +4,19 @@
 {{ $logo   := site.Params.logos.docs_footer }}
 
 <footer class="">
-  <div class="container pt-5 pb-5">
-    <div class="row">
-      <div class="col col-12 col-lg-8">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="{{ $home }}">
-            {{ if $logo }}
-            {{ $url := printf "img/logos/%s" $logo | relURL }}
-              <img src="{{ $url }}" class="navbar-logo">
-            {{ else }}
-            {{ $title }}
-            {{ end }}
-          </a>
-        </div>
-      </div>
+  <div>
+    <div class="navbar-brand">
+      <a class="navbar-item" href="{{ $home }}">
+        {{ if $logo }}
+        {{ $url := printf "img/logos/%s" $logo | relURL }}
+          <img src="{{ $url }}" class="navbar-logo">
+        {{ else }}
+        {{ $title }}
+        {{ end }}
+      </a>
     </div>
-    <div class="row">
-      <div class="col col-12 col-xl-8">
-        {{ partial "footer-content.html" . }}
-      </div>
-    </div>
+  </div>
+  <div>
+    {{ partial "footer-content.html" . }}
   </div>
 </footer>
