Add Tencent and Gamepoch to partners.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -931,6 +931,11 @@ $os-selector-mobile-height: 48px
       margin: 0 16px
       width: 160px
 
+  .tencent-logo
+    background-image: url('/img/logos/partnerLogos/tencent.svg')
+    margin-left: 32px
+    width: 128px
+
 
   .accelbyte-logo
     background-image: url('/img/logos/partnerLogos/accelbyte.svg')
@@ -950,6 +955,9 @@ $os-selector-mobile-height: 48px
     
   .genvid-logo
     background-image: url('/img/logos/partnerLogos/genvid.svg')
+    
+  .gamepoch-logo
+    background-image: url('/img/logos/partnerLogos/gamepoch.jpeg')
 
   .hadean-logo
     background-image: url('/img/logos/partnerLogos/hadean.svg')
@@ -1014,7 +1022,7 @@ $os-selector-mobile-height: 48px
       height: 420px
     
     @include media-breakpoint-down(xs)
-      height: 650px
+      height: 660px
 
   
   .partner-denomination
