--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -15,6 +15,7 @@
             <div class="partner-logo intel-logo"></div>
             <div class="partner-logo microsoft-logo"></div>
             <div class="partner-logo niantic-logo"></div>
+            <div class="partner-logo tencent-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
@@ -24,6 +25,7 @@
             <div class="partner-separator"></div>
             <div class="partner-logo carbonated-logo"></div>
             <div class="partner-logo futurewei-logo"></div>
+            <div class="partner-logo gamepoch-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
