Add new favicon, logos and media assets for the release of for 22.05.0
Signed-off-by: max reimertz <max.reimertz@gmail.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -71,11 +71,11 @@ $font-family-headers: "Open Sans"
 $o3de-black: #000
 $o3de-white: #fff
 $o3de-lightgray: #ddd
-$o3de-blue: #1E71EB
-$o3de-darkblue: #011C46
+$o3de-blue: #1E70EB
+$o3de-darkblue: #0F3876
 $o3de-docsblue: #2A4875
-$o3de-mediumblue: #054CBA
-$o3de-lightblue: #D2EDFF
+$o3de-mediumblue: #4B8DEF
+$o3de-lightblue: #A5C6F7
 $o3de-blue-highlight: #94D2FF
 $o3de-green: #58BD61
 
@@ -329,13 +329,13 @@ code
       background-color: $o3de-lightgray
 
 .navbar-dark .navbar-nav .nav-link.active
-  color: #1E70EB
+  color: $o3de-lightgray
 
 .navbar-docs .navbar-nav .nav-link.active
-  color: $o3de-blue-highlight
+  color: $o3de-lightgray
 
 .navbar-dark .navbar-nav li.active div
-  background-color: #1E70EB
+  background-color: $o3de-lightgray
   padding-bottom: 4px
   position: absolute
   width: 100%
@@ -1184,7 +1184,7 @@ $os-selector-mobile-height: 48px
     color: $o3de-blue-highlight
 
     &:hover, &:active
-      color: $o3de-blue-highlight
+      color: $o3de-mediumblue   
       text-decoration: none
 
 // layouts/social-buttons.html 
