add preview descriptor to Linux
Signed-off-by: Jonathan Capes <j.capes@gmail.com>

--- a/layouts/partials/download/content-linux.html
+++ b/layouts/partials/download/content-linux.html
@@ -1,7 +1,7 @@
 <section class="container pt-lg-5">
   <div class="row">
     <div class="col-12 col-lg-5 pr-lg-5">
-      <h3>Get O3DE for Linux</h3>
+      <h3>Get O3DE for Linux (Preview)</h3>
       <div class="download_release">O3DE 22.05.0 Release</div>
       <p class="download_notes">Read the <a href="https://o3de.org/docs/release-notes/">Release Notes</a> to learn more about O3DE 22.05.0 Release.</p>
       <p id="download-page-button-windows" class="mr-5">
