--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -915,6 +915,13 @@ $os-selector-mobile-height: 48px
     background-image: url('/img/logos/partnerLogos/intel.svg')
     width: 110px
 
+  .lightspeedstudios-logo
+    background-color: #000
+    background-image: url('/img/logos/partnerLogos/lightspeedstudios.png')
+    margin-left: 24px
+    width: 200px
+    padding: 0
+
   .microsoft-logo
     background-image: url('/img/logos/partnerLogos/microsoft.svg')
     margin-left: 32px
@@ -930,11 +937,6 @@ $os-selector-mobile-height: 48px
     @include media-breakpoint-down(sm)
       margin: 0 16px
       width: 160px
-
-  .tencent-logo
-    background-image: url('/img/logos/partnerLogos/tencent.svg')
-    margin-left: 32px
-    width: 128px
 
 
   .accelbyte-logo
