--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -13,9 +13,9 @@
             <div class="partner-logo huawei-logo"></div>
             <div class="partner-separator"></div>
             <div class="partner-logo intel-logo"></div>
+            <div class="partner-logo lightspeedstudios-logo"></div>
             <div class="partner-logo microsoft-logo"></div>
             <div class="partner-logo niantic-logo"></div>
-            <div class="partner-logo tencent-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
