Replace logo with dark version
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -916,9 +916,9 @@ $os-selector-mobile-height: 48px
     width: 110px
 
   .lightspeedstudios-logo
-    background-color: #000
     background-image: url('/img/logos/partnerLogos/lightspeedstudios.png')
-    margin-left: 24px
+    background-size: 120% auto
+    margin:  0 0 0 16px
     width: 200px
     padding: 0
 
