--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -437,7 +437,6 @@ code
 // layouts/partials/hero.html
 
 // banner
-
 a.top-banner
   color: $o3de-white
   background-color: $o3de-blue
@@ -447,42 +446,34 @@ a.top-banner
   box-shadow: 0 0 10px rgba(0,0,0,.3)
   position: relative
   z-index: 1
-  
+
+
   &:hover 
     background-color: darken(#1E71EB, 10%)
 
   .container
     position: relative
-    
+
     @include media-breakpoint-down(lg)
       max-width: 100%
 
     .banner-logo
+      background-image: url('/images/events/o3dcon_2022_1.png')
       background-size: 100% auto
-      background-repeat: no-repeat
-      background-position: 50% 50%
       float: left
+      width: 182px
+      height: 42px
       margin-right: 12px
-
-      &.o3decon
-        background-image: url('/img/logos/O3DECon_Logo-White.svg')
-        width: 182px
-        height: 42px
-      
-      &.o3dejam
-        background-image: url('/img/logos/O3DEJam_Logo-REV-COLOR.svg')
-        width: 220px
-        height: 40px
 
       @include media-breakpoint-down(sm)
         display: none
-    
+
     .mobile-only
       display: none
 
       @include media-breakpoint-down(sm)
         display: inline
-    
+
     .desktop-only
       display: inline
 
@@ -508,10 +499,10 @@ a.top-banner
       border-radius: 4px
       transition: .2s ease
       border: 2px solid $o3de-white
-      
+
       @include media-breakpoint-down(sm)
-        
-      
+
+
       &:hover
         border-color: $o3de-blue-highlight
 
