Changed Color from Blue to Purple to match with the O3DCon Website
Signed-off-by: Amy Finch <amy@finchstudio.ca>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -439,7 +439,7 @@ code
 // banner
 a.top-banner
   color: $o3de-white
-  background-color: $o3de-blue
+  background-color: #652d90
   display: block
   padding: 10px 0
   transition: .2s ease
@@ -449,7 +449,7 @@ a.top-banner
 
 
   &:hover 
-    background-color: darken(#1E71EB, 10%)
+    background-color: darken(#652d90, 10%)
 
   .container
     position: relative
