Updated Button text from Blue to Purple
Signed-off-by: Amy Finch <amy@finchstudio.ca>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -492,7 +492,7 @@ a.top-banner
       top: 50%
       transform: translate(0, -50%)
       background: #fff
-      color: $o3de-blue
+      color: #652d90
       font-weight: 600
       padding: 3px 8px
       font-size: .9rem
